# fibonacci

./: .gitignore  README.markdown  fibonacci.cabal
Data/Numbers/: Fibonacci.hs
