Name:          primes
Version:       0.2.0.0
Cabal-Version: >= 1.6
Synopsis:      Efficient, purely functional generation of prime numbers
Description:

  Computes Fibonacci Numbers in logarithmic time.

Category:      Algorithms, Numerical
License:       BSD3
License-File:  LICENSE
Author:        Sebastian Fischer
Maintainer:    Sebastian Fischer
Bug-Reports:   http://github.com/sebfisch/fibonacci/issues
Homepage:      http://github.com/sebfisch/fibonacci
Build-Type:    Simple
Stability:     experimental

Library
  Build-Depends:    base == 4.*
  Exposed-Modules:  Data.Numbers.Fibonacci
  Ghc-Options:      -Wall

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/fibonacci.git
